--- a/src/components/series/02-reading-the-bible.mdx
+++ b/src/components/series/02-reading-the-bible.mdx
@@ -1,7 +1,7 @@
 ---
 series: 'reading the bible'
 seriesColour: 'blue'
-icon: 'books'
+icon: 'book'
 ---
 
 In 2023 I decided that I wanted to reflect on how I've engaged with scripture in the past, so that I could figure out how I want to engage with it in the&nbsp;future.
