--- a/src/pages/blog/012-reading-wisdom-literature.mdx
+++ b/src/pages/blog/012-reading-wisdom-literature.mdx
@@ -1,11 +1,11 @@
 ---
-layout: "../../layouts/BlogLayout.astro"
-title: "Reading Wisdom Literature"
-description: "What I learned reading Wisdom Literature."
-image: "books"
-pubDate: "2023-09-05"
+layout: '../../layouts/BlogLayout.astro'
+title: 'Reading Wisdom Literature'
+description: 'What I learned reading Wisdom Literature.'
+image: 'book'
+pubDate: '2023-09-05'
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past."
-series: "reading the bible"
+series: 'reading the bible'
 ---
 
 When I was a teenager (and possibly a young adult) Proverbs and Ecclesiastes were two books that I liked to read and kept coming back to. On the other hand, while I had read Job at least twice before studying theology, I don’t recall it having a significant impact on me.
