--- a/src/pages/blog/013-bible-study-vs-devotional-reading.mdx
+++ b/src/pages/blog/013-bible-study-vs-devotional-reading.mdx
@@ -1,11 +1,11 @@
 ---
-layout: "../../layouts/BlogLayout.astro"
-title: "Bible Study vs. Devotional Reading"
-description: "My post-theological-study dilemma."
-image: "books"
-pubDate: "2023-09-10"
+layout: '../../layouts/BlogLayout.astro'
+title: 'Bible Study vs. Devotional Reading'
+description: 'My post-theological-study dilemma.'
+image: 'book'
+pubDate: '2023-09-10'
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past."
-series: "reading the bible"
+series: 'reading the bible'
 ---
 
 In my recollection of the churches that I grew up in, there were certain practices that were regularly encouraged from the pulpit, with the big three being prayer, evangelism, and reading the Bible. While I don’t pray as often as I’d like, over the years I’ve found different ways of praying that have worked for me; I’ve tried evangelism in different ways during different seasons of my life, although with very little to show for it; and for a number of years I managed to keep a practice of regularly reading the Bible.
