--- a/src/pages/blog/014-reading-isaiah.mdx
+++ b/src/pages/blog/014-reading-isaiah.mdx
@@ -1,11 +1,11 @@
 ---
-layout: "../../layouts/BlogLayout.astro"
-title: "Reading Isaiah"
-description: "This proved trickier than I anticipated..."
-image: "books"
-pubDate: "2023-09-17"
+layout: '../../layouts/BlogLayout.astro'
+title: 'Reading Isaiah'
+description: 'This proved trickier than I anticipated...'
+image: 'book'
+pubDate: '2023-09-17'
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past."
-series: "reading the bible"
+series: 'reading the bible'
 ---
 
 Towards the end of my time studying theology, and after [a great internal struggle](/blog/013-bible-study-vs-devotional-reading/), I resolved to take a longer-term approach to reading scripture. In doing so I absolved myself of the expectation that I would read scripture ‘devotionally’ every day, and instead started setting longer term goals about my reading of scripture. The first of these was to map out the structure of the synoptic Gospels (Matthew, Mark, Luke).
