--- a/src/pages/blog/015-psalms-part-1-dissonance.mdx
+++ b/src/pages/blog/015-psalms-part-1-dissonance.mdx
@@ -1,11 +1,11 @@
 ---
-layout: "../../layouts/BlogLayout.astro"
-title: "Psalms Part 1: Dissonance"
-description: "My experience of reading the Psalms."
-image: "books"
-pubDate: "2023-09-24"
+layout: '../../layouts/BlogLayout.astro'
+title: 'Psalms Part 1: Dissonance'
+description: 'My experience of reading the Psalms.'
+image: 'book'
+pubDate: '2023-09-24'
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past. This post includes a bunch of reflections that I wrote back in 2021."
-series: "reading the bible"
+series: 'reading the bible'
 ---
 
 In a [recent post](/blog/013-bible-study-vs-devotional-reading), I talked about struggling with the concept of ‘devotional reading’. During this process, I turned to the Psalms in hope of something that I would be able to be read in a simple way. I was looking for something pure and eternal, something that I could read without question or doubt, something that was simply true. Unfortunately this wasn’t how reading the Psalms turned out for me at that time.
