--- a/src/pages/blog/016-psalms-part-2-sitting-with-scripture.mdx
+++ b/src/pages/blog/016-psalms-part-2-sitting-with-scripture.mdx
@@ -1,11 +1,11 @@
 ---
-layout: "../../layouts/BlogLayout.astro"
-title: "Psalms Part 2: Sitting With Scripture"
-description: "My experience of persisting with the Psalms."
-image: "books"
-pubDate: "2023-10-01"
+layout: '../../layouts/BlogLayout.astro'
+title: 'Psalms Part 2: Sitting With Scripture'
+description: 'My experience of persisting with the Psalms.'
+image: 'book'
+pubDate: '2023-10-01'
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past. This post includes a reflection that I wrote back in 2022."
-series: "reading the bible"
+series: 'reading the bible'
 ---
 
 In my last post, I talked about how reading the Psalms was proving quite difficult for me. Nevertheless, I persevered, and in the end I found a way of approaching the Psalms that seemed to work for me. Admittedly, it involved skipping the ones that I found too difficult or didn’t really connect with (for the time being at least)… Then, once I found ones that I resonated with, I found that simply reading them wasn’t sufficient — I had to do more. But this time it wasn’t study, and it wasn’t looking at the literary structure. I just had to sit with them.
