--- a/src/pages/blog/017-where-to-from-here.mdx
+++ b/src/pages/blog/017-where-to-from-here.mdx
@@ -1,14 +1,14 @@
 ---
-layout: "../../layouts/BlogLayout.astro"
-title: "Where to From Here?"
-description: "Reflecting on the series so far."
-image: "books"
-pubDate: "2023-11-22"
+layout: '../../layouts/BlogLayout.astro'
+title: 'Where to From Here?'
+description: 'Reflecting on the series so far.'
+image: 'book'
+pubDate: '2023-11-22'
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past. This post is a reflection on everything I have covered so far in this series."
-series: "reading the bible"
+series: 'reading the bible'
 ---
 
-So it’s been a few weeks now since my last post (or at least it was when I started writing this), and I’ve been sitting with and reflecting on my past experiences of engaging with scripture, just as I said I would. 
+So it’s been a few weeks now since my last post (or at least it was when I started writing this), and I’ve been sitting with and reflecting on my past experiences of engaging with scripture, just as I said I would.
 
 Initially the process was quite rich, then I felt a bit stuck, and now I think I have a sense of the way forward for me. I’d like to share some key moments from this process.
 
@@ -16,45 +16,45 @@ First, I noticed that my early experiences of scripture all seemed quite positiv
 
 Then I realised that perhaps [my interest in the structure of biblical books](/blog/014-reading-isaiah) has been counter-productive. This is not to say that considering the structure of biblical books is totally invalid, but perhaps it is more of a supplementary or preparatory way of engaging with scripture rather than a standalone practice. Writing this now it sounds a bit obvious, but this was a new thought for me!
 
-As I was reflecting on other posts, I found myself holding both *dissonance,* and what I’m going to call *resonance,* in the back of my mind. This is like how [I found some Psalms really jarring (or dissonant)](/blog/015-psalms-part-1-dissonance), and others I really resonated with. However, rather than skipping over the passages that I find difficult and only sitting with the ones I like, I started wondering about sitting with passages that stand out to me for either reason, whether dissonance or resonance. At this point I’m thinking I could try this with Isaiah — read through slowly as a discipline, being prepared to stop and sit with passages that stand out to me.
+As I was reflecting on other posts, I found myself holding both _dissonance,_ and what I’m going to call _resonance,_ in the back of my mind. This is like how [I found some Psalms really jarring (or dissonant)](/blog/015-psalms-part-1-dissonance), and others I really resonated with. However, rather than skipping over the passages that I find difficult and only sitting with the ones I like, I started wondering about sitting with passages that stand out to me for either reason, whether dissonance or resonance. At this point I’m thinking I could try this with Isaiah — read through slowly as a discipline, being prepared to stop and sit with passages that stand out to me.
 
-When I was first considering this new way forward, I found myself considering it in relation to the idea of *objective* and *subjective* approaches to scripture. Whereas studying scripture is arguably more objective, this idea of sitting with whatever stands out to me feels more subjective. I wasn’t sure what I thought of this, but it reminded me of two other things. The first was a model of spirituality and religion that I came across earlier this year that I wanted to revisit. The second was the idea of scripture as a place to meet with God, which then developed into scripture as a place of *dialogue*.
+When I was first considering this new way forward, I found myself considering it in relation to the idea of _objective_ and _subjective_ approaches to scripture. Whereas studying scripture is arguably more objective, this idea of sitting with whatever stands out to me feels more subjective. I wasn’t sure what I thought of this, but it reminded me of two other things. The first was a model of spirituality and religion that I came across earlier this year that I wanted to revisit. The second was the idea of scripture as a place to meet with God, which then developed into scripture as a place of _dialogue_.
 
 ## Objective and Subjective Revelation
 
 Since studying Karl Barth at Bible college, I’ve tended to think about God’s revelation of himself to us in terms of objective and subjective revelation. For me, objective revelation has tended to be associated with scripture, and subjective revelation has tended to relate to personal experiences of God. This also relates to shared experience and personal experience. Objective revelation is something that can be shared — something that can be directly communicated to others and can be understood through common human experience. On the other hand, try as we might, the experience of personal subjective revelation cannot be transferred to another — the best we can do is describe these experiences.
 
-Either kind of revelation is insufficient and incomplete by itself — subjective revelation without objective revelation tends to end up in strange and unorthodox places, and objective revelation without subjective revelation is dead. This, coupled with the non-transferrable nature of subjective revelation, means that no human can claim exclusive access to God. While we do have the ability to communicate the *objective/shared* aspects of God’s revelation of himself, only God can reveal himself to others in a personal encounter that brings this objective revelation to life.
+Either kind of revelation is insufficient and incomplete by itself — subjective revelation without objective revelation tends to end up in strange and unorthodox places, and objective revelation without subjective revelation is dead. This, coupled with the non-transferrable nature of subjective revelation, means that no human can claim exclusive access to God. While we do have the ability to communicate the _objective/shared_ aspects of God’s revelation of himself, only God can reveal himself to others in a personal encounter that brings this objective revelation to life.
 
-While this model includes the notion of objective revelation as *shared* experience, my experience of it has at times felt quite individualistic. For me the language ‘objective revelation’ also has a sort of rationalist vibe along the lines of Descarte’s “I think therefore I am”, and the word ‘subjective’ often has negative connotations. Looking back at my engagement with scripture, particularly when I was focusing on the structure of biblical books, I can see now that I was leaning heavily towards a rationalist/objective approach where I was focusing on what could be argued/demonstrated rather than what was happening for me as I engaged with scripture. I was leaning more towards the objective than the subjective.
+While this model includes the notion of objective revelation as _shared_ experience, my experience of it has at times felt quite individualistic. For me the language ‘objective revelation’ also has a sort of rationalist vibe along the lines of Descarte’s “I think therefore I am”, and the word ‘subjective’ often has negative connotations. Looking back at my engagement with scripture, particularly when I was focusing on the structure of biblical books, I can see now that I was leaning heavily towards a rationalist/objective approach where I was focusing on what could be argued/demonstrated rather than what was happening for me as I engaged with scripture. I was leaning more towards the objective than the subjective.
 
 ## Spirituality and Religion
 
-I came across a model of spirituality and religion this year while reading *[The Reciprocating Self](https://books.google.com.au/books?id=-vLIDAAAQBAJ&source=gbs_book_other_versions)* for my counselling studies. When I read it I can remember thinking something along the lines of “Wow, this is way richer than my current model!”, but I didn’t have time to stop and take it in — not until now. I should mention that this model doesn’t come from the field of theology, instead it comes from social studies, with a lot of empirical research behind it. While it has some similarities with the model of objective and subjective revelation, it’s also quite different. 
+I came across a model of spirituality and religion this year while reading _[The Reciprocating Self](https://books.google.com.au/books?id=-vLIDAAAQBAJ&source=gbs_book_other_versions)_ for my counselling studies. When I read it I can remember thinking something along the lines of “Wow, this is way richer than my current model!”, but I didn’t have time to stop and take it in — not until now. I should mention that this model doesn’t come from the field of theology, instead it comes from social studies, with a lot of empirical research behind it. While it has some similarities with the model of objective and subjective revelation, it’s also quite different.
 
-In this model, *spirituality* is about our personal awareness and experience of something bigger than ourselves (e.g. God), and it includes actions we might take in response to this. *Religion* is about doctrines and traditions that are shared by and practiced in community. Notice the similarities — like the subjective, spirituality is personal, and like the objective, religion is shared. For me there are also differences. Spirituality is not just about our *experience* of God, but also our *awareness* of God and how this shapes the way we live. Religion is not just a shared experience of rational engagement with scripture as individuals (a very Protestant notion), but is framed very deliberately in the context of religious community.
+In this model, _spirituality_ is about our personal awareness and experience of something bigger than ourselves (e.g. God), and it includes actions we might take in response to this. _Religion_ is about doctrines and traditions that are shared by and practiced in community. Notice the similarities — like the subjective, spirituality is personal, and like the objective, religion is shared. For me there are also differences. Spirituality is not just about our _experience_ of God, but also our _awareness_ of God and how this shapes the way we live. Religion is not just a shared experience of rational engagement with scripture as individuals (a very Protestant notion), but is framed very deliberately in the context of religious community.
 
-For me this model connected with some other ideas I had previously come across. First, to know what is outside of ourselves, we need to know ourselves. We need to be able to distinguish between our own stuff and what is outside of and greater than our self (I recall John Calvin writing something similar in his *Institutes of Religion*). Otherwise how can we know that our ‘spirituality’ isn’t simply an aspect of our own self which we are treating as God? I think part of knowing ourselves is being mindful of some of our human tendencies to give more weight to things that we agree with, and skip over things that we disagree with. When I’m reading a Psalm and it resonates with me, it could be that God’s Spirit is highlighting it for me, but it could also be that it rings true to what I already believe. Obviously God could work through this natural resonance, but it’s worth holding these things lightly and seeing how they pan out. 
+For me this model connected with some other ideas I had previously come across. First, to know what is outside of ourselves, we need to know ourselves. We need to be able to distinguish between our own stuff and what is outside of and greater than our self (I recall John Calvin writing something similar in his _Institutes of Religion_). Otherwise how can we know that our ‘spirituality’ isn’t simply an aspect of our own self which we are treating as God? I think part of knowing ourselves is being mindful of some of our human tendencies to give more weight to things that we agree with, and skip over things that we disagree with. When I’m reading a Psalm and it resonates with me, it could be that God’s Spirit is highlighting it for me, but it could also be that it rings true to what I already believe. Obviously God could work through this natural resonance, but it’s worth holding these things lightly and seeing how they pan out.
 
-Also, if we believe that God is real and that we aren’t the only one who has encounters with him, then when we think *we* have experienced something from God, we can check in with others who know God and ask them whether it lines up with *their* experiences of God. This could help to determine whether our spiritual experiences are truly from something outside ourselves, or if they’re better explained by our own stuff.
+Also, if we believe that God is real and that we aren’t the only one who has encounters with him, then when we think _we_ have experienced something from God, we can check in with others who know God and ask them whether it lines up with _their_ experiences of God. This could help to determine whether our spiritual experiences are truly from something outside ourselves, or if they’re better explained by our own stuff.
 
-The latter observation ties in with how this model of religion recognises the impact of *community* on the formation of religious beliefs and practices. While Protestants often like to think of things in terms of individuals and the Bible — that they (and their community) believe what they believe simply because that’s what the Bible says —  this stance fails to explain how it is that different Christian traditions can arrive at such a variety of positions from reading one and the same Bible. Instead, I would argue that the way we read and interpret scripture is shaped in a big way by the religious traditions and communities that have formed us, hence this model locates doctrine and practice within the context of religious community. I wonder then if there is something helpful about being exposed to the beliefs and practices of a variety of communities? (Rather than living in the bubble of a particular community’s beliefs and practices for our whole life.)
+The latter observation ties in with how this model of religion recognises the impact of _community_ on the formation of religious beliefs and practices. While Protestants often like to think of things in terms of individuals and the Bible — that they (and their community) believe what they believe simply because that’s what the Bible says — this stance fails to explain how it is that different Christian traditions can arrive at such a variety of positions from reading one and the same Bible. Instead, I would argue that the way we read and interpret scripture is shaped in a big way by the religious traditions and communities that have formed us, hence this model locates doctrine and practice within the context of religious community. I wonder then if there is something helpful about being exposed to the beliefs and practices of a variety of communities? (Rather than living in the bubble of a particular community’s beliefs and practices for our whole life.)
 
 ## Scripture as Meeting Place (Place of Dialogue)
 
-As I was considering all this, I started wondering about treating scripture as a meeting place. A place for different parties to gather, and sit, and talk. A place for *dialogue*. 
+As I was considering all this, I started wondering about treating scripture as a meeting place. A place for different parties to gather, and sit, and talk. A place for _dialogue_.
 
 While dialogue normally involves two or more flesh-and-blood people, my reflections also included dialogue with one’s self, and dialogue with God.
 
 ### Dialogue with Self
 
-As I engage with any one part of scripture, I bring all sorts of things to the process, including my knowledge of other parts of scripture, my knowledge and experience of God, my experience of life and the world, and my knowledge and awareness of myself. As I read I can’t help but compare all of these with each other. Sometimes they’ll line up nicely, at other times they’ll sit at odds. How do I respond internally to this resonance and dissonance? 
+As I engage with any one part of scripture, I bring all sorts of things to the process, including my knowledge of other parts of scripture, my knowledge and experience of God, my experience of life and the world, and my knowledge and awareness of myself. As I read I can’t help but compare all of these with each other. Sometimes they’ll line up nicely, at other times they’ll sit at odds. How do I respond internally to this resonance and dissonance?
 
 As time goes by, different parts of myself will grow and change and develop, meaning how I respond to scripture will grow and change and develop. It seems to make sense, then, that I experience scripture differently in different seasons of life — the points of resonance and dissonance change.
 
 ### Dialogue with God
 
-I’m not the only one involved in the dialogue. As we engage with scripture, we hope and pray that God will meet us there and speak to us in ways that surprise and transform us. In my experience, one good test for whether or not it is *God* who is speaking is that it’s not something that we would say ourselves. While it wasn’t while reading scripture, I can remember one time when I’d been complaining to God for months that he wasn’t speaking to me, and I had a job interview coming up. For some reason I asked God if there was anything I needed to know for the job interview, and immediately there was a response — “You are loved.” My first reaction was “Why would I think ‘you are loved’ in response to that question?”, which, in my opinion, gives weight to my conclusion that this response was from God.
+I’m not the only one involved in the dialogue. As we engage with scripture, we hope and pray that God will meet us there and speak to us in ways that surprise and transform us. In my experience, one good test for whether or not it is _God_ who is speaking is that it’s not something that we would say ourselves. While it wasn’t while reading scripture, I can remember one time when I’d been complaining to God for months that he wasn’t speaking to me, and I had a job interview coming up. For some reason I asked God if there was anything I needed to know for the job interview, and immediately there was a response — “You are loved.” My first reaction was “Why would I think ‘you are loved’ in response to that question?”, which, in my opinion, gives weight to my conclusion that this response was from God.
 
 As I wrote about in [my first post on the Psalms](/blog/015-psalms-part-1-dissonance/), our experiences of engaging with scripture, whether resonant or dissonant, also provide an opportunity for us to engage in dialogue with God. Rather than turn away from God or suppress our experiences of dissonance, why not talk to God about these experiences and ask him what to make of them?
 
@@ -62,7 +62,7 @@ As I wrote about in [my first post on the Psalms](/blog/015-psalms-part-1-disson
 
 Of course, sometimes this dialogue takes place in Christian community. Whether in the context of a sermon, a Bible study, a family devotional, or one on one, the scriptures are often a deliberate focal point of discussion between followers of Jesus. As we engage with scripture in community we discover which of our points of resonance and dissonance are shared by others, and which are not. Hopefully the communities that we are a part of are safe places to share both resonance and dissonance, and to explore our different experiences of scripture. Lately I’ve been thinking that I would like to be a part of a small group that meets around scripture again. It feels like it’s been a long time since I’ve sat in this space.
 
-It occurred to me as I was writing this that we don’t just read scripture in Christian community, but also in the context of our surrounding culture and subcultures. Sometimes it might be that I bring culture into my internal dialogue through my personal experience of ‘life and the world’ as mentioned above. At other times we might find ourselves reading with seekers or new believers whose worldviews have very little overlap with our own traditions and are instead drawn from other cultural and subcultural narratives. In my own experience I can think of a number of topics where either my or others’ points of dissonance and resonance with scripture have been informed by cultural perspectives on different topics, including science and creation, gender roles, and sexuality. Having said this, I feel that this interplay has not been as significant to my faith journey as it has to others I know. 
+It occurred to me as I was writing this that we don’t just read scripture in Christian community, but also in the context of our surrounding culture and subcultures. Sometimes it might be that I bring culture into my internal dialogue through my personal experience of ‘life and the world’ as mentioned above. At other times we might find ourselves reading with seekers or new believers whose worldviews have very little overlap with our own traditions and are instead drawn from other cultural and subcultural narratives. In my own experience I can think of a number of topics where either my or others’ points of dissonance and resonance with scripture have been informed by cultural perspectives on different topics, including science and creation, gender roles, and sexuality. Having said this, I feel that this interplay has not been as significant to my faith journey as it has to others I know.
 
 ### My Resolution
 
