--- a/src/pages/blog/011-literature-and-history.mdx
+++ b/src/pages/blog/011-literature-and-history.mdx
@@ -1,11 +1,11 @@
 ---
-layout: "../../layouts/BlogLayout.astro"
-title: "Literature and History"
-description: "What I learned (mostly) from studying Genesis."
-image: "books"
-pubDate: "2023-08-27"
+layout: '../../layouts/BlogLayout.astro'
+title: 'Literature and History'
+description: 'What I learned (mostly) from studying Genesis.'
+image: 'book'
+pubDate: '2023-08-27'
 context: "I've been wanting to think about how I engage with scripture. As part of the process I'm looking back at how I've engaged with it in the past."
-series: "reading the bible"
+series: 'reading the bible'
 ---
 
 After two years at the Silo, and after coming to believe that I was [called to a teaching a ministry within the church](/blog/007-calling-to-ministry/), I decided to pursue further study. First I tried something unconventional — I enrolled for an old-school course called the Licentiate in Theology under the tutelage of David Boan. After trying this for a semester, I switched to a Master of Divinity (I know, it sounds like I was training to be a wizard 😛) through what was then called Vose Seminary. I enrolled at Vose in the second half of 2014, and completed my final research project at the end of 2017. During this time I learned _a lot_ about the Bible, theology and church history. I can say with great certainty that how I engage with scripture was _definitely_ shaped during this time.
