New blog post - 'You are Loved.'

--- a/src/pages/blog/024-a-possible-calling.mdx
+++ b/src/pages/blog/024-a-possible-calling.mdx
@@ -14,9 +14,9 @@ Monica later suggested that I could come on board at Living Grace Dianella (Chur
 
 I participated in staff meetings and in Sunday morning 'Zoom church' for a while [it was in the early days of Covid]. Things didn't seem bad, but I had a few reservations about their location and whether it fit for my family &ndash; I didn't feel quite right about it. We'd actually been hoping to try connecting with some local churches without being tied down to one particular church [in line with my [passion for ecumenism](https://rohannelson.com/blog/022-encouragement-in-ecumenism)].
 
-When the Covid restrictions wound back, I went to their first physical gathering, and was then put on a team responsible for restarting Zoom church as a Sunday afternoon thing running in parallel with the morning gathering, but as a legitimate alternate gathering rather than a derivative service. I wasn't 100% sure about being assigned to the team, but went along with it, and after some initial hesitation, volunteered to do communion.
+When the Covid restrictions wound back, I went to their first physical gathering, and was then put on a team responsible for restarting Zoom church as a Sunday afternoon thing running in parallel with the morning gathering, but as a legitimate alternative gathering rather than a derivative service. I wasn't 100% sure about being assigned to the team, but went along with it, and after some initial hesitation, volunteered to do communion.
 
-On the first day of the new Zoom church, while a song was playing before communion, I was a bit nervous and a bit cold, but I also thought I might be feeling something else from the Holy Spirit. Afterwards I felt great, and really positive about the afternoon zoom church, and have since talked to Monica and she has released me from any (mostly self imposed) expectation to be regularly at the morning service.
+On the first day of the new Zoom church, while a song was playing before communion, I was a bit nervous and a bit cold, but I also thought I might be feeling something else from the Holy Spirit. Afterwards I felt great, and really positive about the afternoon Zoom church, and have since talked to Monica and she has released me from any (mostly self imposed) expectation to be regularly at the morning service.
 
 I thought I should record this because it seemed like it could be a real God moment and he could be leading me into doing some stuff at Living Grace with Monica. It's also cool because it allows us to be connected with Living Grace in a way that keeps us free to participate in things that other churches are doing on Sunday mornings too 🙂
 
