--- a/src/pages/blog/032-on-spiritual-leadership.mdx
+++ b/src/pages/blog/032-on-spiritual-leadership.mdx
@@ -13,12 +13,15 @@ Introduction goes here
 
 ### To-do:
 
-- Fallback font for Greek
-- Transliterate Greek
-- Format Verses
 - Check for any missed emphasis and consider formatting for emphasis
 - Light editing
 - Write introduction
+- Transliterate Greek? (I'm erring on the side of not.)
+
+Notes for intro:
+Interesting artifact of my thinking pre-Mdiv (different hermeneutic etc. - e.g. talk about pattern of scripture).
+Have since had experience of church boards as opposed to eldership which arguably function more as corporate governance.
+David Boan as the only one to provide constructive criticism, saying I'd done a good job of identifying the 'loci' but I hadn't integrated it with my theology (I didn't really know what he meant by 'integrate it with my theology' at the time, because I didn't really have a concept of what theology was.)
 
 ---
 
@@ -32,19 +35,21 @@ The forms of leadership that I have primarily addressed in this study are as fol
 
 Acts 6:1-7 is disputably the only example of the appointment of deacons in the new testament.
 
-> “6 Now at this time while the disciples were increasing in number, a complaint arose on the part of the Hellenistic Jews against the native Hebrews, because their widows were being overlooked in the daily serving of food. 2 So the twelve summoned the congregation of the disciples and said, “It is not desirable for us to neglect the word of God in order to serve tables. 3 Therefore, brethren, select from among you seven men of good reputation, full of the Spirit and of wisdom, whom we may put in charge of this task. 4 But we will devote ourselves to prayer and to the ministry of the word.” 5 The statement found approval with the whole congregation; and they chose Stephen, a man full of faith and of the Holy Spirit, and Philip, Prochorus, Nicanor, Timon, Parmenas and Nicolas, a proselyte from Antioch. 6 And these they brought before the apostles; and after praying, they laid their hands on them. 7 The word of God kept on spreading; and the number of the disciples continued to increase greatly in Jerusalem, and a great many of the priests were becoming obedient to the faith.”
+> **6** Now at this time while the disciples were increasing in number, a complaint arose on the part of the Hellenistic Jews against the native Hebrews, because their widows were being overlooked in the daily serving of food. <sup>2</sup>So the twelve summoned the congregation of the disciples and said, “It is not desirable for us to neglect the word of God in order to serve tables. <sup>3</sup>Therefore, brethren, select from among you seven men of good reputation, full of the Spirit and of wisdom, whom we may put in charge of this task. <sup>4</sup>But we will devote ourselves to prayer and to the ministry of the word.” <sup>5</sup>The statement found approval with the whole congregation; and they chose Stephen, a man full of faith and of the Holy Spirit, and Philip, Prochorus, Nicanor, Timon, Parmenas and Nicolas, a proselyte from Antioch. <sup>6</sup>And these they brought before the apostles; and after praying, they laid their hands on them. <sup>7</sup>The word of God kept on spreading; and the number of the disciples continued to increase greatly in Jerusalem, and a great many of the priests were becoming obedient to the faith.
 
-I think the words of the twelve in verses 2-3 very clearly indicate the role of a deacon, “It is not desirable for us to neglect the word of God in order to serve tables”. I believe that this shows that the purpose of the diaconate is to look after practical and administrative matters so that the spiritual leadership (including missionaries) can focus on the word of God (amongst other things). Note that the Greek word for 'to serve' at the end of verse 3 is διακονειν which is a verbal form of diakonos (deacon). Then, in verse 4, the apostles say “But we will devote ourselves to prayer and to the ministry (διακονια) of the word.” This shows that it was not service in general that the apostles were leaving to the deacons, but that which did not pertain to the ministry which the apostles had been called to.
+I think the words of the twelve in verses 2-3 very clearly indicate the role of a deacon, “It is not desirable for us to neglect the word of God in order to serve tables”. I believe that this shows the purpose of the diaconate is to look after practical and administrative matters so that the spiritual leadership (including missionaries) can focus on the word of God (amongst other things). Note that the Greek word for 'to serve' at the end of verse 3 is διακονειν which is a verbal form of diakonos (deacon). Then, in verse 4, the apostles say “But we will devote ourselves to prayer and to the ministry (διακονια) of the word.” This shows that it was not service in general that the apostles were leaving to the deacons, but that which did not pertain to the ministry which the apostles had been called to.
 
-There are a handful of arguments against identifying the seven men in Acts 6:1-7 as deacons; instead they would claim that their office was a one off establishment that should be taken as nothing more. The most common thread in these arguments is as follows: there are accounts of Philip (the evangelist) and Stephen (the martyr) doing things other than the ministry of a deacon in Acts 6:8-15 (Stephen) and Acts 8:26-40 & 21:8-9 (Philip), therefore, they could not possibly be deacons. However, I believe this to be false as I see no reason to assume that the appointment of a person into an office of the church limits them to serving God, and limits God to only working through them, according to their office. Also, I have found no evidence to indicate that being appointed a deacon for a time means that you are confined to this role for life. In fact, it seems as though after the stoning of Stephen a great persecution of the church begun, so that the remaining 6 men could no longer continue in their appointed roles in Jerusalem. Thus I believe that Acts 6:1-7 is an example of the appointment of deacons and shows that the role of deacon is a role of administrative leadership whose purpose is to free those called to spiritual leadership to devote themselves to spiritual matters.
+There are a handful of arguments against identifying the seven men in Acts 6:1-7 as deacons; instead they could claim that their office was a one off establishment that should be taken as nothing more. The most common thread in these arguments is as follows: there are accounts of Philip (the evangelist) and Stephen (the martyr) doing things other than the ministry of a deacon in Acts 6:8-15 (Stephen) and Acts 8:26-40 and 21:8-9 (Philip). Therefore, they could not possibly be deacons. However, I believe this to be false as I see no reason to assume that the appointment of a person into an office of the church limits them to serving God (and limits God to only working through them) according to their office. Also, I have found no evidence to indicate that being appointed a deacon for a time means that you are confined to this role for life. In fact, it seems as though after the stoning of Stephen a great persecution of the church began, so that the remaining six men could no longer continue in their appointed roles in Jerusalem. Thus I believe that Acts 6:1-7 is an example of the appointment of deacons and shows that the role of deacon is a role of administrative leadership whose purpose is to free those called to spiritual leadership to devote themselves to spiritual matters.
+
+# Up to here
 
 ### Elders, Overseers and Shepherds
 
-### Is There a Difference?
+#### Is There a Difference?
 
 In studying spiritual leadership, I found it necessary to investigate the relationship between the words 'elder', 'overseer' and 'shepherd' (pastor) as used in the Greek New Testament. Upon examination, it seems fairly clear that these three words refer to different aspects of the same office.
 
-Firstly, there are five passages in the Greek New Testament that use the word 'επισκοποσ' (overseer): Acts 20:28, Phil 1:1, 1 Tim 3:2, Titus 1:7 and 1 Peter 2:25. 1 Peter refers to Jesus as the shepherd and overseer of our souls; Phil 1:1 addresses the overseers and deacons; and 1 Timothy 3:2-7 details some requirements that an overseer should meet. The remaining two passages speak to the relationship between these 3 words.
+Firstly, there are five passages in the Greek New Testament that use the word 'επισκοπος' (overseer): Acts 20:28, Phil 1:1, 1 Tim 3:2, Titus 1:7 and 1 Peter 2:25. 1 Peter refers to Jesus as the shepherd and overseer of our souls; Phil 1:1 addresses the overseers and deacons; and 1 Timothy 3:2-7 details some requirements that an overseer should meet. The remaining two passages speak to the relationship between these 3 words.
 
 In Acts 20:28 Paul, speaking to the Ephesian elders, says to them “Be on guard for yourselves and for all the flock, among which the Holy Spirit has made you overseers, to shepherd the church of God”. In this verse Paul tells the elders to shepherd the church of God as overseers, thus connecting oversight and shepherding with eldership.
 
@@ -56,19 +61,19 @@ Finally, as an aside, in Eph 4:11 Paul lists what is commonly known as the 'five
 
 From here on in the study, I may use the words overseer, elder and shepherd, somewhat interchangeably when in reference to the office of spiritual leadership. I might also mention that I don't mean to say that the different names don't convey different aspects of the role, nor do I think it would be right to say that all elders are gifted in, and function in, exactly the same way. This section is only to show that 'elder', 'overseer' (or bishop) and shepherd (or pastor) refer to the same office of spiritual leadership within the church.
 
-### How Many Should We Have?
+#### How Many Should We Have?
 
 I am now going to present the biblical view in regards to the ideal number of elders; specifically whether you should have just one or multiple. In looking at the Greek word for elder, which is πρεσβυτερος, I have not found any passages that support the idea of having only one elder over the church, in fact they do quite the opposite. Acts 11:30 mentions the elders in Judea; in Titus 1:5, Paul says that he left Titus in Crete so that he might appoint elders in every city and in James 5:14, James says that if anyone is sick then they should call the elders of the church to pray for them. Clearly the Bible indicates that a church should have multiple elders.
 
 When considering the passages on overseers, the question is a little less clear. Given that 1 Peter 2:25 is not relevant to this question, then there are 4 remaining passages that mention overseers. 2 of these passages (Acts 20 and Phil 1:1) use the plural. The other 2, (1 Tim 3:2 and Titus 1:7) use the singular. The unifying feature for the use of the singular is that, both times, it is used in reference to the selection of an overseer. Daniel B. Wallace, a highly regarded Koine Greek scholar, said in his book 'Beyond the Basics of Greek Grammar' that the use of the singular in this case is generic and not monadic. That is to say, the Greek text says 'an overseer must be', not 'the overseer'. However, I am no Greek scholar and have not done the research to be able to confirm this claim myself. It is also worth noting that in 1 Timothy 3, when Paul says τον επισκοπον (a singular form of overseer) he also says διακονουσ (a plural form of deacon), both in regards to the selection of people for these positions. That said, these observations do not necessarily support the idea of a lone overseer, they simply highlight a linguistic issue that I don't quite understand and so I must defer judgement to Wallace. Even so, as far as I can tell, it seems that the Bible supports having multiple people in offices of spiritual leadership where possible, especially if elder and overseer refers to the same office.
 
-### What Should They Be Like?
+#### What Should They Be Like?
 
 The next three sections detail the biblical requirements for the selection of spiritual leaders, the things they should do as leaders, and the manner in which they should do so. In this first section it is important to note that these requirements are things which those selected are expected to already be and do prior to their appointment as leaders. That is, they are not things which they would begin to do, or become able to do, on appointment, but things that they already do and already are out of their obedience to Christ's calling. The two key passages on selection criteria for elders/overseers are 1 Tim 3:1-7 and Titus 1:5-9.
 
-> 1 Timothy 3:1-7 “It is a trustworthy statement: if any man aspires to the office of overseer, it is a fine work he desires to do. 2 An overseer, then, must be above reproach, the husband of one wife, temperate, prudent, respectable, hospitable, able to teach, 3 not addicted to wine or violent, but gentle, peaceable, free from the love of money. 4 He must be one who manages his own household well, keeping his children under control with all dignity 5 (but if a man does not know how to manage his own household, how will he take care of the church of God?), 6 and not a new convert, so that he will not become conceited and fall into the condemnation incurred by the devil. 7 And he must have a good reputation with those outside the church, so that he will not fall into reproach and the snare of the devil.”
+> 1 Timothy 3:1-7 “It is a trustworthy statement: if any man aspires to the office of overseer, it is a fine work he desires to do. <sup>2</sup>An overseer, then, must be above reproach, the husband of one wife, temperate, prudent, respectable, hospitable, able to teach, <sup>3</sup>not addicted to wine or violent, but gentle, peaceable, free from the love of money. <sup>4</sup>He must be one who manages his own household well, keeping his children under control with all dignity <sup>5</sup>(but if a man does not know how to manage his own household, how will he take care of the church of God?), <sup>6</sup>and not a new convert, so that he will not become conceited and fall into the condemnation incurred by the devil. <sup>7</sup>And he must have a good reputation with those outside the church, so that he will not fall into reproach and the snare of the devil.”
 
-> Titus 1:5-9 “5 For this reason I left you in Crete, that you would set in order what remains and appoint elders in every city as I directed you, 6 namely, if any man is above reproach, the husband of one wife, having children who believe, not accused of reckless living or rebellion. 7 For the overseer must be above reproach as God’s steward, not self-pleasing, not quick-tempered, not addicted to wine, not violent, not fond of sordid gain, 8 but hospitable, loving what is good, sensible, just, devout, self-controlled, 9 holding fast the faithful word which is in accordance with the teaching, so that he will be able both to exhort in sound doctrine and to refute those who contradict.
+> Titus 1:5-9 “<sup>5</sup>For this reason I left you in Crete, that you would set in order what remains and appoint elders in every city as I directed you, <sup>6</sup>namely, if any man is above reproach, the husband of one wife, having children who believe, not accused of reckless living or rebellion. <sup>7</sup>For the overseer must be above reproach as God’s steward, not self-pleasing, not quick-tempered, not addicted to wine, not violent, not fond of sordid gain, <sup>8</sup>but hospitable, loving what is good, sensible, just, devout, self-controlled, <sup>9</sup>holding fast the faithful word which is in accordance with the teaching, so that he will be able both to exhort in sound doctrine and to refute those who contradict.
 
 I do not want to add much to what is said by these passages, but I will expand on the meaning of a few of the Greek words.
 
@@ -76,16 +81,16 @@ In 1 Tim 3:2 and Titus 1:8 the word translated as 'hospitable' is φιλοξεν
 
 Secondly, in 1 Tim 3:4 when it says 'one who manages his own household well', the word for manage is προϊστημι, which literally means to stand before, thus carrying an idea of leadership. In the Manual Greek Lexicon of the New Testament by Abbot-Smith they use the words rule, govern, preside, direct and maintain for προϊστημι. These verses speak for themselves and I do not wish to spend any further time discussing them in the context of criteria for the selection of eldership.
 
-### What Do They Do?
+#### What Do They Do?
 
 The New Testament presents a rich and clear picture of the general function of spiritual leadership within the church. In this section I have presented a number of verbs that are used in the new testament that build a picture of a church leaders roles. Below I have listed the passages in which I found these ideas.
 Acts 20:17-38, Eph 4:11-16, 1 Thes 5:12-13, 1 Tim 3:1-7, 1 Tim 5:17-19, Titus 1:5-9, Hebrews 13:17 and 1 Peter 5:1-5.
 
-### Κοπιαω – Working
+##### Κοπιαω – Working
 
 The first verb that I would like to present is κοπιαω which conveys the idea of hard work, or toil. This verb is used in 1 Thes 5:12 “But we ask you, brothers, to respect those who labour among you and are over you in the Lord” and 1 Tim 5:17 “Let the elders who rule well among you be considered worthy of double honour, especially those who labour in preaching and teaching”. These verses show that leading a church is hard work and is something that should be worked hard at. So much so that in 1 Tim 5:17 Paul writes to Timothy that those elders who 'work hard in word and teaching' should be considered worthy of 'double honour' which seems to refer to financial support. This is made especially clear in the context, for in verse 18 he says, “For the Scripture says, 'you shall not muzzle the ox while he is threshing' and 'The labourer is worthy of his wages'”. Thus, the Bible shows that spiritual leadership ought to labour amongst the church.
 
-### Προσεχω, Γρηγορεω & Αγρυπνεω - Watching
+##### Προσεχω, Γρηγορεω & Αγρυπνεω - Watching
 
 Another important aspect of spiritual leadership's function is a wakeful, diligent watching. This is conveyed using the three verbs προσεχω, γρηγορεω and αγρυπνεω, as well as the verb επισκοπεω, but as that is the verb for overseeing, I will address that later. Before I show the texts where these verbs are used, I might mention that in Koine Greek the idea of watching has a much deeper meaning than simply looking at something.
 
@@ -95,7 +100,7 @@ In verse 31, Paul says “Therefore, be on the alert, remembering that night and
 
 The final word that I would like to address with regards to watching is αγρυπνεω which has the idea of watching sleeplessly, wakefully and/or vigilantly. This word is used in Hebrews 13:17 “Obey your leaders and submit to them, for they keep watch over your souls as those who will give an account”. You can see in this verse that the writer of Hebrews understands that church leaders ought to 'keep watch over' the souls of those who are under them, furthermore, they ought to do so 'as those who will give an account'. Thus you can see from these passages and the use of these words, that a function of spiritual leadership within the church is to diligently, attentively and wakefully (if not even sleeplessly) keep watch over the flock of God. For there are many who would lead those, who have been purchased with the blood of Christ, astray.
 
-### Διδασκω, Καταρτισμος – Teaching and Equipping
+##### Διδασκω, Καταρτισμος – Teaching and Equipping
 
 In 1 Timothy 3:2 it says that if someone wishes to be an overseer that they must be able to teach, also in 1 Timothy 5:17, “Let the elders who rule well among you be considered worthy of double honour, especially those who labour in word and teaching”.
 
@@ -119,19 +124,19 @@ In regards to one of the expected outcomes of teaching; in Ephesians 4:11-12 the
 
 Finally in Titus 1:9, on the topic of elders, Paul writes that they must be 'holding fast the faithful word which is in accordance with the teaching, so that he will be able both to exhort in sound doctrine (διδασκαλια) and to refute those who contradict'. This verse carries the idea of exhorting someone to live according to the good teaching which they have received. It also shows that the eldership should have a strong grasp of both Jesus and the apostles teaching so that they might not only teach what is right, but refute that which is not, which brings us to the next task I would like to present.
 
-### Ελεγχω & Νουθετεω – Rebuking
+##### Ελεγχω & Νουθετεω – Rebuking
 
 Titus 1:9 clearly shows the necessity of a strong eldership that upholds the truth and protects the flock from those who would deceive them, intentionally or unintentionally. The word used there is ελεγχω which Abbott-Smith lists as convict, expose or show him his fault. This also ties in with the idea of watching, for what should an elder who diligently watches do when he sees that his flock are caught in error or are being deceived?
 
 In 1 Thes 5:12-13 it says 'We ask you brothers, to respect those who labour among you and are over you in the Lord and admonish you'. The word used here is νουθετεω from νους which is 'mind', and τιτθημι which is 'to put or place', thus literally it means to put in mind. It is typically translated as 'admonish' or 'exhort' but I have also seen 'warn'. These verses show that elders must be prepared to deal with error amongst the church.
 
-### Προϊστημι & Επιμελεομαι – Leading and Caring
+##### Προϊστημι & Επιμελεομαι – Leading and Caring
 
 The word προϊστημι literally means to stand before and has the sense of leading. Abbott-Smith lists it as to preside, rule, govern, or to direct & maintain. This verb is used in 1 Tim 5:17 'The elders who rule well among you' and 1 Thes 5:12, 'But we ask you, brothers, to respect those who labour among you and are over you in the Lord'.
 
 Προϊστημι is also used in 1 Tim 3:4-5 where it says 'He must be one who manages his own household well, keeping his children under control with all dignity, (but if a man does not know how to manage his own household, how will he take care of the church of God?).' Here προϊστημι is contrasted with the Greek word 'επιμελεομαι' which means 'to care' and was used in reference to the good Samaritan, it is a gentle, thoughtful, diligent care that goes beyond physical care. These verses show that the elders must be prepared to lead and care for the church of God. The manner in which they lead will be presented in the next major section.
 
-### Επισκοπεω – Overseeing
+##### Επισκοπεω – Overseeing
 
 The verb επισκοπεω is made up of επι, meaning over, and σκοπς a watcher, hence the idea of watching over or overseeing. Abbot-Smith lists it as 1. to look upon, observe, examine or 2. to visit or care for. A related word, episkeptomai, is used in reference to God 'visiting' his people. This visitation results in positive outcomes for the good and upright, and judgement against the evil men of the world, and so the idea of sorting good from bad is carried in επισκοπεω. Two passages from the Septuagint where this idea can be seen are Jeremiah 49:8, 'Flee, turn back, dwell in the depths, inhabitants of Dedan; for I will bring the calamity of Esau on him, the time that I shall visit him.' and Genesis 21:1, 'Yahweh visited Sarah as he had said, and Yahweh did to Sarah as he had spoken' (Sarah conceived). So you can see that επισκοπεω describes a watchful care that addresses both positive and negative circumstances.
 Hebrews 12:14-17 is a rather instructive passage in regards to oversight;
@@ -140,7 +145,7 @@ Hebrews 12:14-17 is a rather instructive passage in regards to oversight;
 
 > If a root of bitterness was to spring up, it would defile many, and so must be prevented. One the other hand, if one treats the things of God as Esau did, then it is at their own cost, they risk being denied the fruits of repentance. This passage gives examples of a number of issues that might be prevented or addressed by one who is overseeing for the good of the church.
 
-### Ποιμαινω - Shepherding
+##### Ποιμαινω - Shepherding
 
 Sheep and shepherds are not uncommonly mentioned in the Bible. In 1 Sam 17 David recounts,
 
@@ -148,11 +153,11 @@ Sheep and shepherds are not uncommonly mentioned in the Bible. In 1 Sam 17 David
 
 As a shepherd, David would protect his father's sheep from wild beasts. In Psalm 23, 'The Lord is my Shepherd', David describes God as a shepherd who makes him lie down in green pastures and leads him beside still waters, this shows the care of a shepherd. In John 10, Jesus says that he is the good shepherd who lays down his life for the sheep, he says that he has come so that they may have life and life to the full. Jesus also used a parable in Luke 15 which shows that a Shepherd will go out to find his lost sheep and rejoices upon it's rescue. After his resurrection, Jesus commanded Peter to shepherd and feed his sheep (John 21:15-17). The bible is full of imagery that shows how a shepherd, nurtures and protects his sheep. Saying that shepherding is to simply feed/teach the church and protect them from false shepherds does not do justice to the biblical imagery.
 
-### In what manner should the elders lead?
+#### In what manner should the elders lead?
 
 In the previous section I covered what the eldership ought to do. In this section I will detail the manner in which they should do these things. In Matthew 20:25-27 Jesus says, 'You know that the rulers of the Gentiles lord it over them, and those who are great exercise authority over them. Yet it shall not be so among you; but whoever desires to become great among you, let him be your servant. And whoever desires to be first among you, let him be your slave'. In 1 Peter 5:1-5 it also says 'shepherd the flock of God among you, exercising oversight not under compulsion, but voluntarily, according to the will of God; and not for sordid gain, but with eagerness; nor yet as lording it over those allotted to your charge, but proving to be examples to the flock. And when the Chief Shepherd appears, you will receive the unfading crown of glory'. These verses clearly state that those who would lead the church ought to serve the church, voluntarily, eagerly and leading as examples. Not to say that they have no authority, for how else would they lead the church or uphold the truth within their congregations, but that they would lead with humility and would serve just as Christ did, laying down his life for the world. Finally, in Acts 20, Paul exhorts the Ephesian elders to remember that 'night and day for a period of three years I did not cease to admonish each one with tears. This, once again, shows the humility and gentleness with which Paul admonished those of the Ephesian church, not rebuking them condescendingly, but with tears. These verses clearly show the manner in which the elders ought to lead the church.
 
-### How should the church respond to them?
+#### How should the church respond to them?
 
 In 1 Peter 5 after mentioning how the elders should lead, Peter goes on to write, 'You younger men, likewise, be subject to your elders; and all of you, clothe yourselves with humility toward one another, for God is opposed to the proud, but gives grace to the humble'. In Hebrews 13:7,17 it says 'Remember those who led you, who spoke the word of God to you; and considering the result of their conduct, imitate their faith.' and 'Obey your leaders and submit to them, for they keep watch over your souls as those who will give an account. Let them do this with joy and not with grief for this would be unprofitable for you'. Similarly, in 1 Thessalonians 5:12-13 it says 'But we request of you, brethren, that you appreciate those who diligently labour among you, and have charge over you in the Lord and give you instruction, and that you esteem them very highly in love because of their work. Live in peace with one another'.
 
