Added functionality to reverse specific series based on 'reversed: true' in series frontmatter and set 'Today I Learned to be Reversed'.

--- a/src/components/series/03-today-i-learned.mdx
+++ b/src/components/series/03-today-i-learned.mdx
@@ -2,6 +2,7 @@
 series: 'today I learned...'
 seriesColour: 'green'
 icon: 'computer'
+reversed: true
 ---
 
 Where I post highlights from what I've been learning recently, particularly in relation to web development.
