--- a/src/pages/blog/029-a-call-from-ron.mdx
+++ b/src/pages/blog/029-a-call-from-ron.mdx
@@ -8,7 +8,7 @@ pubDate: '2024-04-14'
 series: 'spiritual experiences'
 ---
 
-Back when I was at Lake Gwelup Christian Church, I did a 'story-sermon' inspired by the way stories were done in [Godly Play](http://godlyplay.com.au/) (but without props). It was surprisingly well received. Some people asked for transcripts (particularly for people who had English as a second language), and an older man named Ron told me it was one of the best sermons he had ever heard (and he had heard a lot of sermons).
+Back when I was at Lake Gwelup Christian Church, I did a 'story-sermon' inspired by the way stories were done in <a href="http://godlyplay.com.au/" target="_blank">Godly Play</a> (but without props). It was surprisingly well received. Some people asked for transcripts (particularly for people who had English as a second language), and an older man named Ron told me it was one of the best sermons he had ever heard (and he had heard a lot of sermons).
 
 Some years later, I was struggling with sermon prep and feeling a bit down about work at Dianella when I happened to get a call from Ron. He said that he’d been talking with some people about the first story-sermon I did. In his words it was the one ‘where I covered the whole history of the Jewish people’ or something like that. He was wondering where I was up to these days, so he decided to give me a call.
 
