Fixed formatting of references on latest article, plus added some soft-hyphens to key pages.

--- a/src/components/series/01-spiritual-experiences.mdx
+++ b/src/components/series/01-spiritual-experiences.mdx
@@ -4,6 +4,6 @@ seriesColour: 'purple'
 icon: 'dove'
 ---
 
-When I was 21 I started to keep a record of my significant spiritual experiences.
+When I was 21 I started to keep a record of my sig&shy;nificant spiritual exper&shy;iences.
 
-In 2023 I mustered up the courage to start publishing them (there's more to come).
+In 2023 I mustered up the courage to start pub&shy;lishing them (there's more to come).
