--- a/src/components/series/03-today-i-learned.mdx
+++ b/src/components/series/03-today-i-learned.mdx
@@ -5,4 +5,4 @@ icon: 'computer'
 reversed: true
 ---
 
-Where I post highlights from what I've been learning recently, particularly in relation to web development.
+Where I post high&shy;lights from what I've been learning recently, partic&shy;ularly in relation to web development.
