--- a/src/components/series/04-academic-writings.mdx
+++ b/src/components/series/04-academic-writings.mdx
@@ -4,4 +4,4 @@ seriesColour: 'yellow'
 icon: 'quill'
 ---
 
-A collation of academic writings I've done that I've either found significant or want to&nbsp;share.
+A collation of aca&shy;demic writ&shy;ings I've done that I've either found sig&shy;nificant or want to&nbsp;share.
