--- a/src/pages/blog/035-the-role-of-philosophy-in-against-eunomius.mdx
+++ b/src/pages/blog/035-the-role-of-philosophy-in-against-eunomius.mdx
@@ -143,14 +143,14 @@ Lastly, in contrast with Eunomius, Basil seemed to give less weight to philosoph
 
 ### Bibliography
 
-Basil of Caesarea. 2011. ‘Against Eunomius’. In _Against Eunomius_, translated by Mark DelCogliano and Andrew Radde-Gallwitz, 81–196. The Fathers of the Church. Washington: The Catholic University of America Press.
+**Basil of Caesarea. 2011.** ‘Against Eunomius’. In _Against Eunomius_, translated by Mark DelCogliano and Andrew Radde-Gallwitz, 81–196. The Fathers of the Church. Washington: The Catholic University of America Press.
 
-DelCogliano, Mark, and Andrew Radde-Gallwitz. 2011. _Against Eunomius_. The Fathers of the Church. Washington: The Catholic University of America Press.
+**DelCogliano, Mark, and Andrew Radde-Gallwitz.** 2011. _Against Eunomius_. The Fathers of the Church. Washington: The Catholic University of America Press.
 
-Eunomius of Cyzicus. 1987. ‘The Apology of Eunomius’. In _Eunomius: The Extant Works_, translated by Richard Paul Vaggione, 34–67. Oxford; New York: Clarendon; Oxford University Press.
+**Eunomius of Cyzicus. 1987.** ‘The Apology of Eunomius’. In _Eunomius: The Extant Works_, translated by Richard Paul Vaggione, 34–67. Oxford; New York: Clarendon; Oxford University Press.
 
-Holder, Arthur. 1992. ‘Saint Basil the Great on Secular Education and Christian Virtue’. _Religious Education_ 3, no. 87: 395–415.
+**Holder, Arthur. 1992.** ‘Saint Basil the Great on Secular Education and Christian Virtue’. _Religious Education_ 3, no. 87: 395–415.
 
-Radde-Gallwitz, Andrew. 2009. _Basil of Caesarea, Gregory of Nyssa, and the Transformation of Divine Simplicity_. Oxford; New York: Oxford University Press.
+**Radde-Gallwitz, Andrew. 2009.** _Basil of Caesarea, Gregory of Nyssa, and the Transformation of Divine Simplicity_. Oxford; New York: Oxford University Press.
 
-Ruether, Rosemary Radford. 1969. _Gregory of Nazianzus: Rhetor and Philosopher_. Oxford: Clarendon.
+**Ruether, Rosemary Radford. 1969.** _Gregory of Nazianzus: Rhetor and Philosopher_. Oxford: Clarendon.
